# spdlog

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
bench/: CMakeLists.txt  spdlog-async.cpp  spdlog-bench.cpp
example/: CMakeLists.txt  example.cpp
include/spdlog/: async_logger.h  common.h  exception.h  formatter.h  fwd.h  level.h  logger.h  spdlog.h
include/spdlog/details/: async_log_helper.h  async_logger-inl.h  compiler.h  config.h  file_helper.h  flag_formatter.h  fwd.h  line_logger.h  log_msg.h  logger-inl.h  os.h  registry-inl.h  registry.h  spdlog-inl.h
include/spdlog/formatters/: pattern_formatter.h
include/spdlog/sinks/: all.h  base_sink.h  file_sinks.h  fwd.h  syslog_sink.h
include/spdlog/sinks/file/: all.h  daily.h  fwd.h  rotating.h  simple.h
include/spdlog/sinks/stdio/: all.h  fwd.h  stderr.h  stdout.h
src/: async_log_helper.cc  async_logger.cc  daily.cc  file_helper.cc  format.cc  line_logger.cc  logger.cc  pattern_formatter.cc  registry.cc  spdlog.cc
tests/: CMakeLists.txt  format.cpp  includes.h
